--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-countup": "^6.2.0",
     "react-dom": "^18.1.0",
     "react-hover-video-player": "^9.6.0",
+    "react-player": "^2.10.1",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
